[MainView] add a few buttons

--- a/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
@@ -69,10 +69,10 @@
                      <children>
                         <VBox alignment="TOP_CENTER" layoutX="10.0" layoutY="14.0" prefHeight="369.0" prefWidth="92.0" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Button fx:id="personsBtn" mnemonicParsing="false" onAction="#showPersons" text="Persons" />
-                              <Button fx:id="subjectsBtn" mnemonicParsing="false" onAction="#showSubjects" text="Subjects" />
-                              <Button fx:id="housingBtn" mnemonicParsing="false" text="Housing" />
-                              <Button fx:id="treatmentsBtn" mnemonicParsing="false" text="Treatments" />
+                              <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#showInventory" text="Home" />
+                              <Button fx:id="personsBtn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPersons" text="Persons" />
+                              <Button fx:id="subjectsBtn" mnemonicParsing="false" onAction="#showSubjects" text="Subjects" textAlignment="CENTER" />
+                              <Button fx:id="treatmentsBtn" mnemonicParsing="false" onAction="#showTreatments" text="Treatments" />
                            </children>
                            <padding>
                               <Insets top="20.0" />
