--- a/database_mockup/src/animalkeeping/ui/fxml/PersonsView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/PersonsView.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="animalkeeping.ui.controller.PersonViewController">
    <children>
       <SplitPane dividerPositions="0.3" layoutX="111.0" layoutY="68.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="300.0" prefWidth="160.0">
                <children>
                   <TableView fx:id="personsTable" layoutX="67.0" layoutY="-28.0" prefHeight="115.0" prefWidth="598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
@@ -23,9 +22,10 @@
                   </TableView>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane maxHeight="50.0" minHeight="0.0" minWidth="0.0" prefHeight="50.0" prefWidth="598.0">
                <children>
-                  <Button fx:id="refreshBtn" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#refreshTable" text="refresh" />
+                  <Button fx:id="refreshBtn" defaultButton="true" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#refreshTable" text="refresh" />
+                  <Button fx:id="returnBtn" layoutX="105.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#returnToMainView" text="return" />
                </children>
             </AnchorPane>
         </items>
