--- a/database_mockup/src/animalkeeping/ui/fxml/UserAddView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/UserAddView.fxml
@@ -59,10 +59,11 @@
             <Font size="18.0" />
           </font>
         </Label>
-            <TextField fx:id="first" layoutX="14.0" layoutY="96.0" promptText="First Name" />
-            <TextField fx:id="last" layoutX="14.0" layoutY="128.0" promptText="Last Name" />
-            <TextField fx:id="email" layoutX="14.0" layoutY="160.0" promptText="eMail" />
+            <TextField fx:id="firstFld" layoutX="14.0" layoutY="96.0" promptText="First Name" />
+            <TextField fx:id="lastFld" layoutX="14.0" layoutY="128.0" promptText="Last Name" />
+            <TextField fx:id="emailFld" layoutX="14.0" layoutY="160.0" promptText="eMail" />
             <Button fx:id="userAddBtn" layoutX="61.0" layoutY="211.0" mnemonicParsing="false" onAction="#addUser" text="Add User" />
+            <Button fx:id="returnBtn" layoutX="250.0" layoutY="39.0" mnemonicParsing="false" onAction="#returnToMainView" text="Return to main view" />
       </children>
     </AnchorPane>
   </children>
