add vbox for context dependent controls

--- a/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
@@ -76,6 +76,7 @@
                               <Button fx:id="treatmentsBtn" mnemonicParsing="false" onAction="#showTreatments" text="Treatments" />
                               <TextField fx:id="idField" onAction="#goToId" promptText="go to id" />
                               <Button fx:id="addUsrBtn" mnemonicParsing="false" onAction="#showUserAddInterface" text="Add User" />
+                              <VBox fx:id="contextButtonBox" prefHeight="200.0" prefWidth="100.0" />
                            </children>
                            <padding>
                               <Insets top="20.0" />
