--- a/database_mockup/src/animalkeeping/ui/fxml/Inventory.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/Inventory.fxml
@@ -5,11 +5,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
-
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -39,10 +37,10 @@
       <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <children>
-            <PieChart fx:id="populationChart" blendMode="DARKEN" labelLineLength="10.0" />
+            <PieChart fx:id="populationChart" blendMode="DARKEN" labelLineLength="10.0" VBox.vgrow="ALWAYS" />
          </children>
       </VBox>
-      <ScrollPane fx:id="tableScrollPane" fitToHeight="true" fitToWidth="true">
+      <ScrollPane fx:id="tableScrollPane" fitToHeight="true" fitToWidth="true" VBox.vgrow="ALWAYS">
         <content>
           <AnchorPane />
         </content>
