--- a/database_mockup/src/animalkeeping/ui/fxml/TimelinePlot.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/TimelinePlot.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="800.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane fx:id="plotPane" />
+      <VBox fx:id="chartBox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
    </children>
    <padding>
       <Insets left="10.0" right="10.0" />
